<resources>
    <string name="app_name">WorldOfTanksStatus</string>
    <string name="enter_player_nickname">Enter player nickname</string>
    <string name="status">STATUS</string>
    <string name="battles">Battles:</string>
    <string name="wins">Wins:</string>
    <string name="max_frags">Max frags:</string>
    <string name="max_damage">Max damage:</string>
    <string name="max_xp">Max xp:</string>

    <string-array name="flag__server">
        <item>RU</item>
        <item>EU</item>
    </string-array>
</resources>
